# pd_sampleplayer

./: CMakeLists.txt  Makefile  README.md  burea-organ.pd  filter.py  instrument-example.pd  looper  sampleplayer.c  sampleplayer.cpp  sampleplayer.h  sampleplayer_c.c  sampleplayer_c_interface.cpp  sampleplayer_c_interface.h  sampleplayer_pdext.c  sampleplayer~-help.pd  test_resampling.c
instruments/scripts/: burea_funeral_chapel_convert.py  leeds-organ-convert.py
